tests/rosetta/out/Smalltalk/attractive-numbers.out
/workspace/mochi/tests/rosetta/out/Smalltalk/attractive-numbers.st:37: invalid assignment to argument n
/workspace/mochi/tests/rosetta/out/Smalltalk/attractive-numbers.st:60: parse error, expected '|' or identifier
