tests/rosetta/out/Smalltalk/attractive-numbers.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| isPrime d countPrimeFactors count f pad4 s main max line lineCount i c |
isPrime := [:n | ((n < 2)) ifTrue: [
false.
] .
((((n % 2)) = 0)) ifTrue: [
(n = 2).
] .
((((n % 3)) = 0)) ifTrue: [
(n = 3).
] .
d := 5.
[(((d * d)) <= n)] whileTrue: [.
((((n % d)) = 0)) ifTrue: [
false.
] .
d := (d + 2).
((((n % d)) = 0)) ifTrue: [
false.
] .
d := (d + 4).
].
.
true. ].
countPrimeFactors := [:n | ((n = 1)) ifTrue: [
0.
] .
(isPrime value: n) ifTrue: [
1.
] .
count := 0.
f := 2.
[true] whileTrue: [.
((((n % f)) = 0)) ifTrue: [
count := (count + 1).
n := (n / f).
((n = 1)) ifTrue: [
count.
] .
(isPrime value: n) ifTrue: [
f := n.
] .
] ifFalse: [
((f >= 3)) ifTrue: [
f := (f + 2).
] ifFalse: [
f := 3.
].
].
].
.
count. ].
pad4 := [:n | s := (n asString).
[(((s size)) < 4)] whileTrue: [.
s := ((' ') + s).
].
.
s. ].
main := [ max := 120.
Transcript show: ((((('The attractive numbers up to and including ') + ((max asString)))) + (' are:'))) printString; cr.
count := 0.
line := ''.
lineCount := 0.
i := 1.
[(i <= max)] whileTrue: [.
c := countPrimeFactors value: i.
(isPrime value: c) ifTrue: [
line := (line + (pad4 value: i)).
count := (count + 1).
lineCount := (lineCount + 1).
((lineCount = 20)) ifTrue: [
Transcript show: (line) printString; cr.
line := ''.
lineCount := 0.
] .
] .
i := (i + 1).
].
.
((lineCount > 0)) ifTrue: [
Transcript show: (line) printString; cr.
] . ].
main value.
